switching back to mongo

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-romulus.pem
 info.json
 __pycache__
-connect.sh
-create.sql
-sqlitedb.py
 oauth.py
 Pipfile.lock
+postgresql.py
+test.py
+tex.png
+test.tex
